# docker_rust_build

./: .gitignore  Cargo.toml  README.md  docker-bake.hcl
containers/rust_binary/: Dockerfile
csv/: Cargo.toml
csv/src/: main.rs
csv_again/: Cargo.toml
csv_again/src/: main.rs
query/: Cargo.toml
query/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
write/: Cargo.toml
